[package]
name = "code-playground"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
axum = "0.6.4"
env_logger = "0.10.0"
log = "0.4.17"
serde = "1.0.152"
serde_json = "1.0.91"
tempfile = "3.3.0"
tokio = { version = "1.24.2", features = ["full"] }
toml = "0.6.0"
tower-http = { version = "0.3.5", features = ["cors"] }
uuid = { version = "1.2.2", features = ["v4"] }
wait-timeout = "0.2.0"
